bluestore: wrap blob id when it reaches maximum value of int16_t

Blob id exceeds maximum value, this patch is to prevent it.
Fixes: http://tracker.ceph.com/issues/19555

Signed-off-by: Xiaoyan Li <xiaoyan.li@intel.com>